# Customer-Support-RAG--LLM-LangChain-LangGraph-Gemini-Streamlit

./: .env.example  README.md  app.py  graph.py  ingest.py  prompts.py  pyproject.toml  retriever.py  styles.py
data/: clothing_store_faq.md
vector_store/: chroma.sqlite3
