[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "torchvision>=0.28.0",
]
